Opened 10 years ago

Closed 10 years ago

#11168 closed bug (fixed)

NetFS does not compile

Reported by: jalopeura Owned by: bonefish
Priority: normal Milestone: R1
Component: File Systems/NetFS Version: R1/Development
Keywords: Cc:
Blocked By: Blocking: #10191
Platform: All

Description

While attempting to fix #10191, I found that NetFS no longer compiles.

The jam error is:

/Haiku_Build/haiku/src/add-ons/kernel/file_systems/netfs/headers/shared/Utils.h: In function `void safe_closesocket(volatile vint32 &)': In file included from /Haiku_Build/haiku/src/add-ons/kernel/file_systems/netfs/shared/InsecureChannel.cpp:17: /Haiku_Build/haiku/src/add-ons/kernel/file_systems/netfs/headers/shared/Utils.h:29: passing volatile vint32 *' as argument 1 of atomic_or(int32 *, long int)' discards qualifiers

Attachments (1)

0001-Adding-explicit-cast-to-atomic-operations.patch (5.2 KB ) - added by jalopeura 10 years ago.

Download all attachments as: .zip

Change History (6)

comment:1 by anevilyak, 10 years ago

Component: File Systems/UserlandFSFile Systems/NetFS

comment:2 by jalopeura, 10 years ago

patch: 01

comment:3 by jalopeura, 10 years ago

Notes:

  • This ticket is interdependent with #10192 (Convert NetFS to hpkg). Without this fix, NetFS will not compile, so the package won't be made. But without the other fix, the system won't even try to compile NetFS, so you can't test this fix.

comment:4 by bonefish, 10 years ago

A better solution would be to make the respective variables non-volatile. It should be checked that this is fine in all contexts of use, though.

comment:5 by pulkomandy, 10 years ago

Resolution: fixed
Status: newclosed

Fixed in hrev48318.

Note: See TracTickets for help on using tickets.