NetFS: fix build.

Fixes #11168.